# f-k-hdu-compiler

./: .gitignore
lab2/: .prettierrc  README.md  main.py  pyproject.toml  test
lab2/lab2/: __init__.py  dfa.py  nfa.py  regex.py  state.py
lab2/result/: dfa_ab  dfa_minimize_(ab)*|c+  dfa_minimize_(a|b)*  dfa_minimize_(a|b)*abb  dfa_minimize_(a|b)+  dfa_minimize_a(b|c)  dfa_minimize_ab  dfa_minimize_ab+c?  dfa_minimize_a|c  dfa_minimize_b(a|b)*aa  nfa_ab
lab3/: README.md  main.py  pyproject.toml
lab3/cases/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt
lab3/lab3/: cfg.py  trie.py
lab3/tests/: __init__.py  test_cfg.py  test_trie.py
