[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "Compilation Principles lab 2"
authors = ["focused_xy <elpsycongroo242@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
