[tool.poetry]
name = "lab3"
version = "0.1.0"
description = "Compilation Principles lab 3"
authors = ["focused_xy <elpsycongroo242@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-random = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
